tests/reject/bad_call_2.ul
char foo(float x) {
    return 'd';
}

void main() {
  string s;
  s = foo(3.3);
}